# gumeter

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements.txt  run_experiments.sh  setup.py
benchmark_results/: flops_aws_lambda_replica0.json  flops_aws_lambda_replica1.json  flops_aws_lambda_replica2.json  flops_aws_lambda_replica3.json  flops_aws_lambda_replica4.json  flops_code_engine_replica0.json  flops_code_engine_replica1.json  flops_code_engine_replica2.json  flops_code_engine_replica3.json  flops_code_engine_replica4.json  flops_gcp_cloudrun_replica0.json  flops_gcp_cloudrun_replica1.json  flops_gcp_cloudrun_replica2.json  flops_gcp_cloudrun_replica3.json  flops_gcp_cloudrun_replica4.json  mandelbrot_aws_lambda_replica0.json  mandelbrot_aws_lambda_replica1.json  mandelbrot_aws_lambda_replica2.json  mandelbrot_aws_lambda_replica3.json  mandelbrot_aws_lambda_replica4.json  mandelbrot_code_engine_replica0.json  mandelbrot_code_engine_replica1.json  mandelbrot_code_engine_replica2.json  mandelbrot_code_engine_replica3.json  mandelbrot_code_engine_replica4.json  mandelbrot_gcp_cloudrun_replica0.json  mandelbrot_gcp_cloudrun_replica1.json  mandelbrot_gcp_cloudrun_replica2.json  mandelbrot_gcp_cloudrun_replica3.json  mandelbrot_gcp_cloudrun_replica4.json  montecarlo_pi_aws_lambda_replica0.json  montecarlo_pi_aws_lambda_replica1.json  montecarlo_pi_aws_lambda_replica2.json  montecarlo_pi_aws_lambda_replica3.json  montecarlo_pi_aws_lambda_replica4.json  montecarlo_pi_code_engine_replica0.json  montecarlo_pi_code_engine_replica1.json  (+41 more)
gumeter/: cli.py  (+3 more)
(+45 files in other folders)
